# behaviortrade

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/routes/: alerts.py  behavioral.py  copilot.py  correlations.py  gnn.py  news.py  paper_trades.py  predictions.py  prices.py  social.py  strategies.py
apps/api/app/core/: config.py  database.py  redis_client.py
apps/api/app/data_sources/macro/: fred.py  vix.py  yahoo_finance.py
apps/api/app/data_sources/market/: binance_ws.py  coinbase.py  coingecko.py  coinmarketcap.py  exchange_volumes.py  kaiko.py  kraken.py  messari.py
apps/api/app/data_sources/news/: cryptopanic.py  newsapi.py  rss_feeds.py  sec_edgar.py
apps/api/app/data_sources/onchain/: blockchain_info.py  cryptoquant.py  debank.py  defi_llama.py  dune.py  etherscan.py  glassnode.py  (+3 more)
apps/api/app/gnn/: confidence_router.py  graph_builder.py  historical_data.py  historical_trainer.py  inference.py  model.py  outputs.py  regime_detector.py  service.py  trainer.py
apps/api/app/models/: __init__.py  alerts.py  behavioral.py  correlations.py  news.py  paper_trades.py  predictions.py  prices.py  social.py  strategies.py
apps/api/app/nlp/: entity_extractor.py  finbert.py  news_similarity.py
apps/api/app/strategies/: __init__.py  algo_bot.py  arbitrage.py  base.py  day_trading.py  dca.py  defi_yield.py  futures.py  hodl.py  news_sentiment.py  range_trading.py  scalping.py  signal_engine.py  swing.py  trend_following.py
apps/api/app/workers/: celery_app.py  correlation_compute.py  data_ingestion.py  gnn_inference.py  reddit_sentiment.py  retrain.py
apps/api/scripts/: train_historical.py
apps/api/tests/: conftest.py  test_correlations.py  test_paper_trades.py  test_signal_engine.py
(+60 files in other folders)
