[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "behaviortrade-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi[all]>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Cache / Queue
    "redis[hiredis]>=5.0.0",
    "celery[redis]>=5.3.0",
    # Config
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    # HTTP clients
    "httpx>=0.27.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    # Exchange
    "ccxt>=4.3.0",
    # On-chain
    "web3>=6.19.0",
    # Social
    "asyncpraw>=7.7.0",
    "pytrends>=4.9.0",
    # News
    "feedparser>=6.0.0",
    # ML / NLP (optional - heavy deps, install separately for Phase 2)
    # "torch>=2.3.0",
    # "torch-geometric>=2.5.0",
    # "transformers>=4.41.0",
    # "sentence-transformers>=3.0.0",
    # Scheduler
    "apscheduler>=3.10.0",
    # Data
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.4.0",
    # Finance data
    # "yfinance>=0.2.38",
    # AI Copilot
    "openai>=1.35.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.3.0",
    "torch-geometric>=2.5.0",
    "transformers>=4.41.0",
    "sentence-transformers>=3.0.0",
]
all = [
    "behaviortrade-api[ml]",
    "yfinance>=0.2.38",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
